--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
 # Database credentials
-DB_HOST=db
+DB_HOST=mariadb
 DB_NAME=mydatabase
 DB_USER=myuser
 DB_PASS=mypassword
@@ -8,11 +8,10 @@ DB_PASS=mypassword
 MYSQL_ROOT_PASSWORD=example_password
 
 # WordPress database credentials
-WORDPRESS_DB_HOST=db
-WORDPRESS_DB_NAME=mydatabase
-WORDPRESS_DB_USER=myuser
-WORDPRESS_DB_PASSWORD=mypassword
-WORDPRESS_TABLE_PREFIX=wp_
+WORDPRESS_DB_HOST=$(DB_HOST)
+WORDPRESS_DB_USER=example_user
+WORDPRESS_DB_PASSWORD=$(DB_PASS)
+WORDPRESS_DB_NAME=example_db
 
 # Nginx environment variables
 NGINX_SERVER_NAME=localhost
