--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,25 +1,18 @@
-FROM debian:buster
+# 베이스 이미지 설정
+FROM alpine:3.13.5
 
-# install mariadb
-RUN apt-get update && \
-    apt-get install -y mariadb-server
+# Mariadb 설치
+RUN apk update && apk add --no-cache mariadb mariadb-client
 
-# copy over custom configurations
-COPY conf/ /etc/mysql/mariadb.conf.d/
-RUN chown -R mysql:mysql /etc/mysql/mariadb.conf.d/
+# 데이터베이스 디렉토리 생성
+RUN mkdir -p /home/sielee/data
 
-# copy over tools
-COPY tools/ /usr/local/bin/
-RUN chmod +x /usr/local/bin/*
+# 마운트 가능한 볼륨 생성
+VOLUME /home/sielee/data
 
-# setup entrypoint script
-COPY entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
-
-# expose default mariadb port
+# 포트 매핑
 EXPOSE 3306
 
-# start mariadb service
+# 컨테이너 실행 시 자동으로 실행할 명령어
 CMD ["mysqld"]
 
