--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,15 +1,30 @@
-FROM debian:buster
+FROM debian:buster-slim
 
+# Install necessary packages
 RUN apt-get update && \
-    apt-get install -y php7.4-fpm php7.4-mysql php7.4-gd php7.4-curl php7.4-xml php7.4-mbstring && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y \
+    curl \
+    wget \
+    unzip \
+    php \
+    php-fpm \
+    php-mysql \
+    php-gd \
+    php-curl \
+    php-json \
+    php-mbstring \
+    php-xml \
+    php-xmlrpc
 
 # Copy WordPress files
-COPY ./cont/wordpress /var/www/html
+COPY wordpress ./requirements/wordpress/wordpress
 
-# Set permissions
+# Set ownership and permissions
 RUN chown -R www-data:www-data /var/www/html && \
     chmod -R 755 /var/www/html
 
-CMD ["php-fpm7.4", "-F"]
+# Expose port
+EXPOSE 9000
 
+# Start services
+CMD ["php-fpm7.4", "-F"]
