Makeflie done & mariadb yet

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,7 +5,9 @@ DB_USER=myuser
 DB_PASS=mypassword
 
 # MySQL root user credentials
-MYSQL_ROOT_PASSWORD=example_password
+MYSQL_USER=new_user
+MYSQL_PASSWORD=new_password
+MYSQL_DATABASE=new_database
 
 # WordPress database credentials
 WORDPRESS_DB_HOST=$(DB_HOST)
