--- a/srcs/.env
+++ b/srcs/.env
@@ -11,9 +11,9 @@ MYSQL_DATABASE=new_database
 
 # WordPress database credentials
 WORDPRESS_DB_HOST=$(DB_HOST)
-WORDPRESS_DB_USER=example_user
+WORDPRESS_DB_USER=sielee
 WORDPRESS_DB_PASSWORD=$(DB_PASS)
-WORDPRESS_DB_NAME=example_db
+WORDPRESS_DB_NAME=db
 
 # Nginx environment variables
 NGINX_SERVER_NAME=localhost
