--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,34 @@
+# server {
+#     listen      443 ssl;
+#     server_name sielee.42.fr www.sielee.42.fr;
+#     root    /var/www/;
+#     index index.php;
+#     ssl_certificate     /etc/nginx/ssl/sielee.42.fr.crt;
+#     ssl_certificate_key /etc/nginx/ssl/sielee.42.fr.key;
+#     ssl_protocols       TLSv1.2 TLSv1.3;
+#     ssl_session_timeout 10m;
+#     keepalive_timeout 70;
+#     location / {
+#         try_files $uri /index.php?$args;
+#         add_header Last-Modified $date_gmt;
+#         add_header Cache-Control 'no-store, no-cache';
+#         if_modified_since off;
+#         expires off;
+#         etag off;
+#     }
+#     location ~ \.php$ {
+#         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#         fastcgi_pass wordpress:9000;
+#         fastcgi_index index.php;
+#         include fastcgi_params;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         fastcgi_param PATH_INFO $fastcgi_path_info;
+#     }
+# }
+
 server {
-    listen 80;
-    server_name sielee.42.fr;
+    listen 443;
+    server_name localhost;
     root /var/www/html;
 
     location / {
@@ -14,3 +42,21 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
+
+
+# server {
+#     listen 443;
+#     server_name sielee.42.fr;
+#     root /var/www/html;
+
+#     location / {
+#         try_files $uri $uri/ /index.php?$args;
+#     }
+
+#     location ~ \.php$ {
+#         include fastcgi_params;
+#         fastcgi_pass wordpress:9000;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         fastcgi_param PATH_INFO $fastcgi_path_info;
+#     }
+# }
