--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && \
 
 # for SSL certificate
 RUN mkdir /etc/nginx/ssl
-RUN openssl x509 -req -in sielee.csr -signkey sielee.key -out sielee.crt -days 365 -sha256 \
+RUN openssl req -newkey rsa:4096 -x509 -days 365 -sha256 -nodes \
 -keyout /etc/nginx/ssl/sielee.key \
 -out /etc/nginx/ssl/sielee.crt \
 -subj "/C=KR/ST=Seoul/L=Seoul/O=42Seoul/OU=Lee/CN=sielee"
