--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,7 +9,7 @@ server {
 	listen	[::]:443 ssl;
 
     server_name sielee.42.fr;
-    root    /var/www/;
+    root    /var/www/html;
     index index.php;
     ssl_certificate     /etc/nginx/ssl/sielee.crt;
     ssl_certificate_key /etc/nginx/ssl/sielee.key;
