--- a/srcs/.env
+++ b/srcs/.env
@@ -1,22 +1,37 @@
 # Volume path
 VOLUME_PATH=/Users/sielee/data
 
-# Database credentials
-DB_HOST=mariadb
-DB_NAME=mydatabase
-DB_USER=myuser
-DB_PASS=mypassword
-
-# MySQL root user credentials
-MYSQL_USER=new_user
-MYSQL_PASSWORD=new_password
-MYSQL_DATABASE=new_database
-
-# WordPress database credentials
-WORDPRESS_DB_HOST=$(DB_HOST)
-WORDPRESS_DB_USER=sielee
-WORDPRESS_DB_PASSWORD=$(DB_PASS)
-WORDPRESS_DB_NAME=db
-
 # Nginx environment variables
 NGINX_SERVER_NAME=localhost
+
+# Volume Path
+VOLPATH=/home/jseo/data
+
+# Host
+HOST_NAME=localhost
+HOST_IPV4=127.0.0.1
+HOST_IPV6=::1
+
+# MariaDB
+MARIADB_HOST=mariadb
+MARIADB_DB=wordpress
+MARIADB_USER=sielee
+MARIADB_PWD=1234
+MARIADB_ADMIN_USER=root
+MARIADB_ADMIN_PWD=1234
+
+# WordPress
+WP_URL=https://sielee.42.fr
+WP_TITLE=Inception
+WP_ADMIN_USER=sielee
+WP_ADMIN_PWD=1234
+WP_ADMIN_EMAIL=sielee@student.42seoul.kr
+WP_USER=evaluator
+WP_USER_PWD=1234
+WP_USER_EMAIL=evaluator@student.42seoul.kr
+
+# FTP
+FTP_USER=sielee
+FTP_PWD=1234
+
+
