--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3'
 
 services:
 
-
   wordpress:
     container_name: wordpress
     build:
@@ -42,6 +41,8 @@ services:
       - wordpress
     ports:
       - "443:443"
+    env_file:
+      - .env
     volumes:
       - ./requirements/nginx/conf/:/etc/nginx/http.d/
       - ./requirements/nginx/tools:/etc/nginx/ssl/
