--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,24 +1,20 @@
-FROM alpine:3.16
+FROM        alpine:3.16
 
-RUN apk update && \
-    apk add mariadb mariadb-client mariadb-server-utils
+RUN         apk update && \
+            apk upgrade && \
+            apk add openrc && \
+            apk add mysql mysql-client && \
+            apk add curl
 
-RUN mkdir -p /var/run/mysqld && \
-    chmod 777 /var/run/mysqld
+EXPOSE      3306
 
-RUN { echo '[mysqld]'; \
-      echo 'skip-host-cache'; \
-      echo 'skip-name-resolve'; \
-      echo 'bind-address=0.0.0.0'; \
-      echo 'skip-networking=0'; \
-    } > /etc/my.cnf.d/docker.cnf
+RUN			mkdir -p /run/mysqld
+RUN			chown -R mysql:mysql /run/mysqld
 
+RUN			mkdir -p /var/lib/mysql
+RUN			chown -R mysql:mysql /var/lib/mysql
 
-RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
+COPY        /tools/mariadb.sh  /tmp/mariadb.sh
+ADD         ./conf/mariadb-server.conf /etc/my.cnf.d/mariadb-server.cnf
 
-EXPOSE 3306
-
-COPY ./conf/create_db.sh .
-RUN sh create_db.sh && rm create_db.sh
-CMD ["/usr/bin/mysqld", "--user=mysql", "--skip-log-error"]
-
+CMD         ["sh", "tmp/mariadb.sh"]
