--- a/srcs/.env
+++ b/srcs/.env
@@ -4,34 +4,26 @@ VOLUME_PATH=/Users/sielee/data
 # Nginx environment variables
 NGINX_SERVER_NAME=localhost
 
-# Volume Path
-VOLPATH=/home/jseo/data
-
 # Host
 HOST_NAME=localhost
 HOST_IPV4=127.0.0.1
 HOST_IPV6=::1
 
-# MariaDB
-MARIADB_HOST=mariadb
-MARIADB_DB=wordpress
-MARIADB_USER=sielee
-MARIADB_PWD=1234
-MARIADB_ADMIN_USER=root
-MARIADB_ADMIN_PWD=1234
 
-# WordPress
-WP_URL=https://sielee.42.fr
-WP_TITLE=Inception
-WP_ADMIN_USER=sielee
-WP_ADMIN_PWD=1234
-WP_ADMIN_EMAIL=sielee@student.42seoul.kr
-WP_USER=evaluator
-WP_USER_PWD=1234
-WP_USER_EMAIL=evaluator@student.42seoul.kr
+DB_ROOT_PASSWORD=1234
+DB_NAME=wordpress
+DB_USER=user
+DB_USER_PASSWORD=1234
+DB_HOST=mariadb
 
-# FTP
-FTP_USER=sielee
-FTP_PWD=1234
+WORDPRESS_PATH=/var/www/html
+WORDPRESS_URL=sielee.42.fr
+WORDPRESS_ADMIN=sielee
+WORDPRESS_ADMIN_PASSWORD=1234
+WORDPRESS_EMAIL=sielee@student.42seoul.kr
+
+WORDPRESS_USER=user
+WORDPRESS_USER_EMAIL=user@user.com
+WORDPRESS_USER_PASSWORD=1234
 
 
