--- a/srcs/.env
+++ b/srcs/.env
@@ -4,26 +4,11 @@ VOLUME_PATH=/Users/sielee/data
 # Nginx environment variables
 NGINX_SERVER_NAME=localhost
 
-# Host
-HOST_NAME=localhost
-HOST_IPV4=127.0.0.1
-HOST_IPV6=::1
 
+DOMAIN_NAME=sielee.42.fr
 
-DB_ROOT_PASSWORD=1234
-DB_NAME=wordpress
-DB_USER=user
-DB_USER_PASSWORD=1234
-DB_HOST=mariadb
-
-WORDPRESS_PATH=/var/www/html
-WORDPRESS_URL=sielee.42.fr
-WORDPRESS_ADMIN=sielee
-WORDPRESS_ADMIN_PASSWORD=1234
-WORDPRESS_EMAIL=sielee@student.42seoul.kr
-
-WORDPRESS_USER=user
-WORDPRESS_USER_EMAIL=user@user.com
-WORDPRESS_USER_PASSWORD=1234
-
-
+MYSQL_HOSTNAME=mariadb
+MYSQL_DATABASE=wordpress
+MYSQL_USER=sielee
+MYSQL_PASSWORD=new1234
+MYSQL_ROOT_PASSWORD=root4life
