--- a/srcs/.env
+++ b/srcs/.env
@@ -2,10 +2,8 @@
 VOLUME_PATH=/Users/sielee/data
 
 # Nginx environment variables
-NGINX_SERVER_NAME=localhost
 
-
-DOMAIN_NAME=sielee.42.fr
+DOMAIN_NAME=localhost#sielee.42.fr
 
 MYSQL_HOSTNAME=mariadb
 MYSQL_DATABASE=wordpress
