--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,8 +3,10 @@ FROM debian:buster-slim
 RUN apt-get update
 RUN apt-get install -y mariadb-server \
     mariadb-client \
-    vim \
-    && rm -rf /var/lib/apt/lists/*
+    procps \
+    vim
+
+RUN rm -rf /var/lib/mysql/*;
 
 #Allow to run the daemon of mysql
 # Purge and re-create /var/lib/mysql with appropriate ownership
@@ -15,10 +17,7 @@ RUN mkdir -p /var/run/mysqld \
 
 EXPOSE 3306
 
-#COPY		./conf/mysqld.conf ~/my.cnf
-#COPY		./conf/mysqld.conf /etc/mysql/my.cnf
-#COPY		./conf/mysqld.conf /etc/my.cnf
-
+COPY		./conf/mysqld.conf /etc/my.cnf
 
 #Copy of the .sh and .sql in the /bin of the container to be able to run the program
 # Give the right to execute + launch the .sh
