--- a/srcs/.env
+++ b/srcs/.env
@@ -8,5 +8,5 @@ DOMAIN_NAME=localhost#sielee.42.fr
 MYSQL_HOSTNAME=mariadb
 MYSQL_DATABASE=wordpress
 MYSQL_USER=sielee
-MYSQL_PASSWORD=new1234
-MYSQL_ROOT_PASSWORD=root4life
+MYSQL_PASSWORD=2424
+MYSQL_ROOT_PASSWORD=4242
