--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,9 +3,9 @@ FROM debian:buster-slim
 RUN apt-get update
 RUN apt-get install -y mariadb-server \
     mariadb-client \
-    procps \
-    vim
+    procps
 
+# clean remaining data
 RUN rm -rf /var/lib/mysql/*;
 
 #Allow to run the daemon of mysql
@@ -17,17 +17,11 @@ RUN mkdir -p /var/run/mysqld \
 
 EXPOSE 3306
 
-COPY		./conf/mysqld.conf /etc/my.cnf
+COPY ./conf/mysqld.conf /etc/my.cnf
 
-#Copy of the .sh and .sql in the /bin of the container to be able to run the program
-# Give the right to execute + launch the .sh
 COPY ./tools/mariadb.sh /usr/local/bin/
 COPY ./conf/wordpress.sql /usr/local/bin/
 RUN chmod +x /usr/local/bin/mariadb.sh
 RUN chmod +x /usr/local/bin/wordpress.sql
 
 ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
-
-#Command to launch mariadb and enable the database to listen globally - also can be put on mysqldump.cnf file
-CMD ["mysqld", "--bind-address=0.0.0.0"]
-
