--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,27 +1,17 @@
 FROM debian:buster-slim
 
-RUN apt-get update
-RUN apt-get install -y mariadb-server \
-    mariadb-client \
-    procps
+COPY ./tools/mariadb.sh /mariadb.sh
 
-# clean remaining data
-RUN rm -rf /var/lib/mysql/*;
+RUN apt-get update && apt-get upgrade -y && apt-get install -y \
+    mariadb-server \
+    mariadb-client && \
+    mkdir -p /var/run/mysqld && \
+    chown -R mysql:mysql /var/run/mysqld && \
+    chmod +x mariadb.sh && \
+    rm -rf /etc/mysql/mariadb.conf.d/*
 
-#Allow to run the daemon of mysql
-# Purge and re-create /var/lib/mysql with appropriate ownership
-# ensure that /var/run/mysqld (used for socket and lock files) is writable regardless of the UID our mysqld instance ends up having at runtime
-RUN mkdir -p /var/run/mysqld \
-&& chown -R mysql:mysql /var/run/mysqld \
-&& chmod 777 /var/run/mysqld
+COPY ./conf/mysqld.conf /etc/mysql/mariadb.conf.d/
 
 EXPOSE 3306
 
-COPY ./conf/mysqld.conf /etc/my.cnf
-
-COPY ./tools/mariadb.sh /usr/local/bin/
-COPY ./conf/wordpress.sql /usr/local/bin/
-RUN chmod +x /usr/local/bin/mariadb.sh
-RUN chmod +x /usr/local/bin/wordpress.sql
-
-ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
+ENTRYPOINT ["sh", "/mariadb.sh"]
