--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,22 @@
 # Volume path
 VOLUME_PATH=/Users/sielee/data
 
-# Nginx environment variables
-
+INTRA_ID=sielee
 DOMAIN_NAME=localhost#sielee.42.fr
 
 MYSQL_HOSTNAME=mariadb
 MYSQL_DATABASE=wordpress
-MYSQL_USER=sielee
+MYSQL_USER=$INTRA_ID
 MYSQL_PASSWORD=2424
 MYSQL_ROOT_PASSWORD=4242
+
+# wordpress ----------
+WP_TITLE=$INTRA_ID
+# admin
+WP_ADMIN_USER=$INTRA_ID
+WP_ADMIN_EMAIL=$INTRA_ID@student.42seoul.kr
+WP_ADMIN_PASSWORD=4242
+# user
+WP_USER=seojo
+WP_USER_EMAIL=seojo@student.42seoul.kr
+WP_USER_PASSWORD=1004
