--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
 # Volume path
-VOLUME_PATH=/Users/sielee/data
+VOLUME_PATH=/home/sielee/data
 
 INTRA_ID=sielee
-DOMAIN_NAME=localhost#sielee.42.fr
+DOMAIN_NAME=sielee.42.fr
 
 MYSQL_HOSTNAME=mariadb
 MYSQL_DATABASE=wordpress
