complete without server

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,20 +1,24 @@
 # Volume path
-VOLUME_PATH=/home/sielee/data
+VOLUME_PATH=/Users/sielee/data
 
 INTRA_ID=sielee
-DOMAIN_NAME=sielee.42.fr
 
-MYSQL_HOSTNAME=mariadb
-MYSQL_DATABASE=wordpress
-MYSQL_USER=$INTRA_ID
-MYSQL_PASSWORD=2424
+# mariadb ----------
+MYSQL_HOST=mariadb
+MYSQL_DB=mariadb
+# root
+MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=4242
+# user
+MYSQL_USER=sielee
+MYSQL_PASSWORD=4242
 
 # wordpress ----------
-WP_TITLE=$INTRA_ID
+DOMAIN_NAME=sielee.42.fr
+WP_TITLE=sielee
 # admin
-WP_ADMIN_USER=$INTRA_ID
-WP_ADMIN_EMAIL=$INTRA_ID@student.42seoul.kr
+WP_ADMIN_USER=sielee
+WP_ADMIN_EMAIL=sielee@student.42seoul.kr
 WP_ADMIN_PASSWORD=4242
 # user
 WP_USER=seojo
