--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,16 +9,16 @@ RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     mariadb-client && \
     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
     chmod +x wp-cli.phar && \
-    mv wp-cli.phar /usr/local/bin/wp && \
+    mv wp-cli.phar /usr/local/bin && \
     ln -sf /usr/local/bin/wp-cli.phar /usr/local/bin/wp-cli && \
     mkdir -p /var/www/html /run/php && \
     usermod -G www-data -a www-data && \
     chown -R www-data:www-data /var/www/ && \
     chmod +x wordpress.sh
 
-COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
+WORKDIR /var/www/html
 
-WORKDIR /var/www/html/
+COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
 
 EXPOSE 9000
 
