--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,9 +8,9 @@ RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     mkdir -p /var/run/mysqld && \
     chown -R mysql:mysql /var/run/mysqld && \
     chmod +x mariadb.sh && \
-    rm -rf /etc/mysql/mariadb.conf.d/*
+    rm -rf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-COPY ./conf/mysqld.conf /etc/mysql/mariadb.conf.d/
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
 EXPOSE 3306
 
