--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,17 +1,22 @@
 server {
     listen	443 ssl;
-    listen	[::]:443 ssl;
 
     server_name sielee.42.fr;
-    index index.php;
-    root    /var/www/html;
+    index index.html index.htm index.php;
+    root /var/www/html;
 
     ssl on;
+    ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_certificate_key /etc/ssl/sielee.42.fr.key;
     ssl_certificate     /etc/ssl/sielee.42.fr.crt;
-    ssl_protocols       TLSv1.2 TLSv1.3;
 
+    # "/"로 접근 시 "/wordpress/"로 리다이렉트
     location / {
+        return 301 https://sielee.42.fr/wordpress/;
+    }
+
+    # "/wordpress/"로 접근 시 해당 파일을 찾도록 설정
+    location /wordpress/ {
         try_files $uri $uri/ =404;
     }
 
