--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,7 @@
 # Volume path
-VOLUME_PATH=/Users/sielee/data
+# VOLUME_PATH=/home/sielee/data # for vm
+VOLUME_PATH=Users/sielee/data
+
 
 INTRA_ID=sielee
 
