--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -2,21 +2,18 @@ server {
     listen	443 ssl;
 
     server_name sielee.42.fr;
-    index index.html index.htm index.php;
-    root /var/www/html;
 
     ssl on;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_certificate_key /etc/ssl/sielee.42.fr.key;
     ssl_certificate     /etc/ssl/sielee.42.fr.crt;
 
+    index index.html index.htm index.php;
+
+    root /var/www/html/wordpress;
+
     # "/"로 접근 시 "/wordpress/"로 리다이렉트
     location / {
-        return 301 https://sielee.42.fr/wordpress/;
-    }
-
-    # "/wordpress/"로 접근 시 해당 파일을 찾도록 설정
-    location /wordpress/ {
         try_files $uri $uri/ =404;
     }
 
@@ -28,4 +25,11 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;
     }
+}
+
+server {
+    listen 80;
+    server_name sielee.42.fr;
+
+    return 301 https://$server_name$request_uri;
 }
