--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -10,13 +10,16 @@ server {
 
     index index.html index.htm index.php;
 
-    root /var/www/html/wordpress;
+    root /var/www/html;
 
-    # "/"로 접근 시 "/wordpress/"로 리다이렉트
     location / {
-        try_files $uri $uri/ =404;
+        return 301 https://sielee.42.fr/wordpress/;
     }
 
+    # "/wordpress/"로 접근 시 해당 파일을 찾도록 설정
+    location /wordpress/ {
+        try_files $uri $uri/ =404;
+    }
     location ~ \.php$ {
         fastcgi_pass wordpress:9000;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -25,11 +28,4 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;
     }
-}
-
-server {
-    listen 80;
-    server_name sielee.42.fr;
-
-    return 301 https://$server_name$request_uri;
 }
