--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,6 @@
 # Volume path
-# VOLUME_PATH=/home/sielee/data # for vm
-VOLUME_PATH=Users/sielee/data
+VOLUME_PATH=/home/sielee/data # for vm
+# VOLUME_PATH=Users/sielee/data
 
 
 INTRA_ID=sielee
