--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,9 @@
-# Volume path
-VOLUME_PATH=/home/sielee/data # for vm
-# VOLUME_PATH=Users/sielee/data
-
-
+# certificates ----------
 INTRA_ID=sielee
 
-# mariadb ----------
-MYSQL_HOST=mariadb
-MYSQL_DB=mariadb
+# mysql ----------
+MYSQL_DB=MARIADB
+MYSQL_HOST=MARIADB
 # root
 MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=4242
@@ -23,6 +19,6 @@ WP_ADMIN_USER=sielee
 WP_ADMIN_EMAIL=sielee@student.42seoul.kr
 WP_ADMIN_PASSWORD=4242
 # user
-WP_USER=seojo
-WP_USER_EMAIL=seojo@student.42seoul.kr
+WP_USER=longblack
+WP_USER_EMAIL=longblack@student.42seoul.kr
 WP_USER_PASSWORD=1004
