--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,28 +1,29 @@
 server {
-    listen	443 ssl;
+    listen 443 ssl;
 
-    server_name sielee.42.fr;
+    server_name jeongkpa.42.fr;
 
     ssl on;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_certificate_key /etc/ssl/sielee.42.fr.key;
-    ssl_certificate     /etc/ssl/sielee.42.fr.crt;
+    ssl_protocols  TLSv1.2 TLSv1.3;
+    ssl_certificate_key /etc/ssl/jeongkpa.42.fr.key;
+    ssl_certificate /etc/ssl/jeongkpa.42.fr.crt;
 
     index index.html index.htm index.php;
 
     root /var/www/html;
 
     location / {
-        return 301 https://sielee.42.fr/wordpress/;
+        return 301 https://jeongkpa.42.fr/wordpress/;
     }
 
-    # "/wordpress/"로 접근 시 해당 파일을 찾도록 설정
     location /wordpress/ {
         try_files $uri $uri/ =404;
     }
-    location ~ \.php$ {
+
+    location ~ \.php {
+        # php interpreter (aka Wordpress container)에게 위임.
         fastcgi_pass wordpress:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_split_path_info ^(.+\.php)(.*)$;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
