--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,12 +1,12 @@
-FROM debian:buster-slim
+FROM debian:buster
 
-COPY ./tools/wordpress.sh /wordpress.sh
+EXPOSE 9000
 
-RUN apt-get update && apt-get upgrade -y && apt-get install -y \
-    curl \
-    php7.3-fpm \
-    php-mysql \
-    mariadb-client && \
+COPY ./tools/setup.sh /setup.sh
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y curl mariadb-client php7.3-fpm php-mysql && \
     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
     chmod +x wp-cli.phar && \
     mv wp-cli.phar /usr/local/bin && \
@@ -14,12 +14,10 @@ RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     mkdir -p /var/www/html/wordpress /run/php && \
     usermod -G www-data -a www-data && \
     chown -R www-data:www-data /var/www/ && \
-    chmod +x wordpress.sh
+    chmod +x setup.sh
 
 WORKDIR /var/www/html/wordpress
 
 COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
 
-EXPOSE 9000
-
-ENTRYPOINT ["sh", "/wordpress.sh"]
+ENTRYPOINT ["sh", "/setup.sh"]
