--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,17 +1,17 @@
-FROM debian:buster-slim
-
-COPY ./tools/mariadb.sh /mariadb.sh
-
-RUN apt-get update && apt-get upgrade -y && apt-get install -y \
-    mariadb-server \
-    mariadb-client && \
-    mkdir -p /var/run/mysqld && \
-    chown -R mysql:mysql /var/run/mysqld && \
-    chmod +x mariadb.sh && \
-    rm -rf /etc/mysql/mariadb.conf.d/50-server.cnf
-
-COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
+FROM debian:buster
 
 EXPOSE 3306
 
-ENTRYPOINT ["sh", "/mariadb.sh"]
+COPY ./tools/setup.sh /setup.sh
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y mariadb-server mariadb-client && \
+    mkdir -p /var/run/mysqld && \
+    chown -R mysql:mysql /var/run/mysqld && \
+    chmod +x setup.sh && \
+    rm -f /etc/mysql/mariadb.conf.d/50-server.cnf
+
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
+
+ENTRYPOINT ["sh", "/setup.sh"]
