--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,19 +1,19 @@
 server {
     listen 443 ssl;
 
-    server_name jeongkpa.42.fr;
+    server_name sielee.42.fr;
 
     ssl on;
     ssl_protocols  TLSv1.2 TLSv1.3;
-    ssl_certificate_key /etc/ssl/jeongkpa.42.fr.key;
-    ssl_certificate /etc/ssl/jeongkpa.42.fr.crt;
+    ssl_certificate_key /etc/ssl/sielee.42.fr.key;
+    ssl_certificate /etc/ssl/sielee.42.fr.crt;
 
     index index.html index.htm index.php;
 
     root /var/www/html;
 
     location / {
-        return 301 https://jeongkpa.42.fr/wordpress/;
+        return 301 https://sielee.42.fr/wordpress/;
     }
 
     location /wordpress/ {
