--- a/srcs/.env
+++ b/srcs/.env
@@ -19,6 +19,6 @@ WP_ADMIN_USER=sielee
 WP_ADMIN_EMAIL=sielee@student.42seoul.kr
 WP_ADMIN_PASSWORD=4242
 # user
-WP_USER=longblack
-WP_USER_EMAIL=longblack@student.42seoul.kr
-WP_USER_PASSWORD=1004
+WP_USER=sieun
+WP_USER_EMAIL=sieun@student.42seoul.kr
+WP_USER_PASSWORD=2424
