--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     expose: #컨테이너 내부의 포트 3306을 호스트 외부 포트에 노출시킨다.
       - '3306'
     volumes:
-      - mariadb-volume:/var/lib/mysql # /home/sielee/data/mariadb 디렉토리를 /var/lib/mysql에 매핑.
+      - db-volume:/var/lib/mysql # /home/sielee/data/mariadb 디렉토리를 /var/lib/mysql에 매핑.
     networks: # 도커 네트워크 설정
       - intra-network
     env_file: # 환경 변수 파일
@@ -28,7 +28,7 @@ services:
     expose:
       - '9000'
     volumes:
-      - wordpress-volume:/var/www/html/wordpress # /home/sielee/data/wordpress 디렉토리를 /var/www/html/wordpress에 맵핑
+      - wp-volume:/var/www/html/wordpress # /home/sielee/data/wordpress 디렉토리를 /var/www/html/wordpress에 맵핑
     networks:
       - intra-network
     env_file:
@@ -44,7 +44,7 @@ services:
     ports: # port로 명시한 부분이 바로 host와 연결하는 부분이다. 모든 서비스는 이 port를 통해 접속 가능함.
       - '443:443'
     volumes:
-      - wordpress-volume:/var/www/html/wordpress
+      - wp-volume:/var/www/html/wordpress
     networks:
       - intra-network
     env_file:
@@ -57,13 +57,13 @@ networks:
     # bridge networks are best when you need multiple containers to communicate on the same Docker host.
 
 volumes:
-  mariadb-volume: # volume 이름
+  db-volume: # volume 이름
     driver: local
     driver_opts:
       type: none
       o: bind # bind-mount을 사용해서, host의 file-system을 volume으로 사용한다.
       device: /home/sielee/data/mariadb # 이건 linux에서 사용할 volume 경로 ( Subject 명시 )
-  wordpress-volume: # volume 이름
+  wp-volume: # volume 이름
     driver: local
     driver_opts:
       type: none
