--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,16 +2,16 @@ FROM debian:buster
 
 EXPOSE 3306
 
-COPY ./tools/setup.sh /setup.sh
+COPY ./tools/mariadb.sh /mariadb.sh
 
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y mariadb-server mariadb-client && \
     mkdir -p /var/run/mysqld && \
     chown -R mysql:mysql /var/run/mysqld && \
-    chmod +x setup.sh && \
+    chmod +x mariadb.sh && \
     rm -f /etc/mysql/mariadb.conf.d/50-server.cnf
 
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
-ENTRYPOINT ["sh", "/setup.sh"]
+ENTRYPOINT ["sh", "/mariadb.sh"]
