--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,14 +2,14 @@ FROM debian:buster
 
 EXPOSE 443
 
-COPY ./tools/setup.sh /setup.sh
+COPY ./tools/nginx.sh /nginx.sh
 
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y nginx openssl && \
     mkdir -p /etc/ssl && \
-    chmod +x setup.sh
+    chmod +x nginx.sh
 
 COPY conf/default.conf /etc/nginx/conf.d/default.conf
 
-ENTRYPOINT ["sh", "/setup.sh"]
+ENTRYPOINT ["sh", "/nginx.sh"]
